# src/controllers/player.controller.ts
@@ -1,5 +1,5 @@
 import type { Request as ExpressRequest } from "express";
-import { Body, Controller, Delete, Get, Path, Post, Request, Route, Security, SuccessResponse, Tags } from "tsoa";
+import {Controller, Get, Post, Request, Route, Security, Tags } from "tsoa";
 import { ApiResponse, type ApiResponseFormat } from "../utils/apiResponse.js";
 import { getProductionPerMinute, getPlayerBuildings } from "../services/building.service.js";
 import { getMaxStorageCapacity, getPlayerStorages } from "../services/storage.service.js";
@@ -11,6 +11,7 @@ import { processOfflineProduction } from "../services/duck.service.js";
 @Route("player")
 @Tags("Player")
 export class PlayerController extends Controller {
+    /** Get player data */
     @Get("")
     @Security("bearerAuth")
     public async getPlayer(@Request() req: ExpressRequest): Promise<ApiResponseFormat> {
@@ -42,7 +43,8 @@ export class PlayerController extends Controller {
     }
 
 
-    @Get("sync")
+    /** Synchronize player data (process offline production) */
+    @Post("sync")
     @Security("bearerAuth")
     public async getPlayerSync(@Request() req: ExpressRequest): Promise<ApiResponseFormat> {
         const user = (req as any).user;
@@ -56,6 +58,32 @@ export class PlayerController extends Controller {
             money: user.money,
             productionPerMinute: productionPerMinute,
             maxStorageCapacity: maxStorageCapacity,
+        });
+    }
+
+
+    /** Get player buildings */
+    @Get("buildings")
+    @Security("bearerAuth")
+    public async getPlayerBuildings(@Request() req: ExpressRequest): Promise<ApiResponseFormat> {
+        const user = (req as any).user;
+        const buildings = await getPlayerBuildings(user.id);
+
+        return ApiResponse.success("Player buildings retrieved", {
+            buildings: buildings
+        });
+    }
+
+
+    /** Get player storages */
+    @Get("storages")
+    @Security("bearerAuth")
+    public async getPlayerStorages(@Request() req: ExpressRequest): Promise<ApiResponseFormat> {
+        const user = (req as any).user;
+        const storages = await getPlayerStorages(user.id);
+
+        return ApiResponse.success("Player storages retrieved", {
+            storages: storages
         });
     }
 }
